--- a/demo/books/book-app/pom.xml
+++ b/demo/books/book-app/pom.xml
@@ -44,6 +44,11 @@
 			<artifactId>books-api</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>orchestra</groupId>
+			<artifactId>proxying</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 	
 	<build>
