--- a/proxying/pom.xml
+++ b/proxying/pom.xml
@@ -23,6 +23,12 @@
             <version>1.3.2.RELEASE</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <version>4.2.4.RELEASE</version>
+            <scope>provided</scope>
+        </dependency>
 
         <!-- included -->
         <dependency>
