--- a/demo/books/books-api/pom.xml
+++ b/demo/books/books-api/pom.xml
@@ -37,6 +37,17 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>orchestra</groupId>
+			<artifactId>proxying</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>orchestra</groupId>
+			<artifactId>conductor-api</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 	
 	<build>
